# mac-space-explorer

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
resources/: app.icns
src/: main.rs
src/core/: scanner.rs
src/ui/: heat_map.rs  mod.rs  treemap.rs
