[package]
name = "mac-space-explorer"
version = "0.1.0"
edition = "2021"
authors = ["Cascade"]
description = "A disk space visualization tool for macOS"

[dependencies]
iced = { version = "0.10", features = ["canvas", "tokio"] }
tokio = { version = "1.32", features = ["full"] }
walkdir = "2.4"
chrono = "0.4"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
open = "5.0"
humansize = "2.1"
